--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,7 @@
     {
       "name": "Steeven Andrian Salim",
       "email": "steevenz@steevenz.com",
-      "homepage": "http://www.steevenz.com",
-      "role": "Founder and Lead Project"
-    },
-    {
-      "name": "Teguh Rianto",
-      "email": "teguh.rianto22@gmail.com",
-      "homepage": "http://teguhrianto22.pusku.com",
-      "role": "Template Designer"
+      "homepage": "http://www.steevenz.com"
     }
   ],
   "support": {
@@ -31,6 +24,7 @@
   },
   "require": {
     "php": "^7.2.0",
+    "ext-ctype": "*",
     "o2system/kernel": "*"
   },
   "autoload": {
